# Venice-Media-Skill

./: .editorconfig  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
adapters/kimi-code/venice-media/: SKILL.md
adapters/kimi-code/venice-media/references/: AI Media Generation Reference Manual.md  request.schema.json  venice-openapi.yaml
docs/: agent-workflow.md  api-reference-snapshot.md  architecture.md  host-integrations.md  media-generation-guide.md  releasing.md  security-and-privacy.md  security-post-mortem-july-2026.md  threat-model.md  troubleshooting.md
docs/audits/: Venice_Media_Skill_Remediation_2026-07-18.md
examples/requests/: audio-transcribe.json  image-edit.json  image-generate.json  music.json  seedance-reference-video.json  tts.json  video-generate.json
references/: request.schema.json
scripts/: export-source.sh  inspect-sdist.py  install.ps1  install.sh  refresh-openapi.sh  uninstall.ps1  uninstall.sh  validate.sh  venice-media-keychain  verify-bundled-assets.py  verify-release.py
skills/venice-media/: SKILL.md
skills/venice-media/references/: image_helper.md  request.schema.json
src/venice_media_skill/: __init__.py  catalog.py  cli.py  client.py  config.py  consent.py  errors.py  installer.py  jobs.py  keychain.py  output.py  payloads.py  planner.py  request.py  reserved.py  runner.py  util.py
src/venice_media_skill/assets/: AGENT_INSTRUCTIONS.md  kimi.plugin.json
src/venice_media_skill/assets/skill/: SKILL.md
src/venice_media_skill/assets/skill/references/: request.schema.json
tests/: test_audit_remediation.py  test_auth_diagnostics.py  test_catalog.py  test_cli.py  test_client.py  test_config.py  test_cov.py  test_image_generate_response_modes.py  test_installer.py  test_jobs.py  test_keychain_shell.py  test_output.py  test_planner.py  test_request.py  test_runner.py  test_security.py  test_upscale_encoding.py  test_util.py
